--- a/my-restful-server/package.json
+++ b/my-restful-server/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "benr2324",
+  "name": "my-restful-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.19.2",
-    "mongodb": "^6.5.0"
-  },
-  "keywords": []
+    "express": "^4.19.2"
+  }
 }
